--- a/action.yml
+++ b/action.yml
@@ -9,24 +9,23 @@ runs:
   using: 'docker'
   image: 'Dockerfile'
   args:
-    - ${{ inputs.appID }}
-    - ${{ inputs.publishedFileID }}
     - ${{ inputs.path }}
-    - ${{ inputs.changelog }}
+    - ${{ inputs.steamAcct }}
+    - ${{ inputs.steamPasswd }}
+    - $(( inputs.files ))
+  
 
 inputs:
-  appID:
-    description: "The App ID of the game/app to upload to (https://steamcommunity.com/app/[APPID]/workshop)"
-    required: true
-  publishedFileID:
-    description: "The Workshop ID of your item (https://steamcommunity.com/sharedfiles/filedetails/?id=[WORKSHOPID])"
-    required: true
   path:
-    description: "The path to the content to upload, relative to your repository's root. Omit to use your repository's root"
-    required: false
-    default: ''
-  changelog:
-    description: "An optional note to accompany your update"
-    required: false
-    default: ''
-  
+    description: "The relative base path of your mods in the repo. Include trailing slash"
+    required: true
+    default: 'Mods/'
+  steamAcct:
+    description: "Steam account name to login with"
+    required: true
+  steamPasswd:
+    description: "Steam password (use secrets to store)"
+    required: true
+  files:
+    description: "List of files that have changed in the repo"
+    required: true
