--- a/action.yml
+++ b/action.yml
@@ -8,7 +8,7 @@ branding:
 runs:
   using: 'docker'
   image: 'Dockerfile'
-  args:
+  env:
     - ${{ inputs.path }}
     - ${{ inputs.steamAcct }}
     - ${{ inputs.steamPasswd }}
@@ -19,7 +19,7 @@ inputs:
   path:
     description: "The relative base path of your mods in the repo. Include trailing slash"
     required: true
-    default: 'Mods/'
+    default: 'Mods'
   steamAcct:
     description: "Steam account name to login with"
     required: true
