--- a/action.yml
+++ b/action.yml
@@ -8,7 +8,7 @@ branding:
 runs:
   using: 'docker'
   image: 'Dockerfile'
-  env:
+  args:
     - ${{ inputs.path }}
     - ${{ inputs.steamAcct }}
     - ${{ inputs.steamPasswd }}
