--- a/action.yml
+++ b/action.yml
@@ -42,9 +42,7 @@ inputs:
   steamPasswd:
     description: "Steam password (use secrets to store)"
     required: true
-  files:
-    description: "List of files that have changed in the repo"
-    required: true
   ssfncontents:
     description: "base64 of the steam SSFN file that has authorized the account being used. Used for MFA"
+    default: 'null'
     required: false
