Conversion to only upload specified mod on manual run instead of automatically based on file changes. See previous releases for more automated solutions

--- a/action.yml
+++ b/action.yml
@@ -18,6 +18,7 @@ runs:
         ssfnContents: ${{ inputs.ssfnContents }}
         ssfnFileName: ${{ inputs.ssfnFileName }}
         SteamConfigVDF: ${{ inputs.steamConfigVdf}}
+        modName: ${{ inputs.modName}}
         STEAM_CMD: ${{ steps.setup-steamcmd.outputs.executable }}
       run: |
         git config --global --add safe.directory /github/workspace
@@ -26,9 +27,12 @@ runs:
       shell: bash
 inputs:
   path:
-    description: "The relative base path of your mods in the repo. Do not include trailing slash."
+    description: "The relative base path of your mods in the repo. Do not include trailing slash. This limits where the action references"
     required: true
     default: 'Mods'
+  modNames:
+    description: "Name of VDF file to upload. For multiple uploads in one run, separate them by a space. Does not matter if you include the extension or not Eg: `DraconisOres6.vdf`` or `DraconisOres6`"
+    required: true
   steamAcct:
     description: "Steam account name to login with"
     required: true
